# loudmouth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  test_audio.py  test_server.py
install/: install.sh  install_service.py  loudmouth.service  uninstall.sh
